--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Esp32/ConversorAD/build/
 Esp32/Interrupciones_Semaforo_Cola_Blink/build/
 Esp32/Interrupciones_Semaforos/build/
 Esp32/Interrupciones_Semaforos_2/build/
+Esp32/Task_TestTime_State/build/
